# Vision-AI

./: .claudeignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  demo_server.py  deploy_runpod.sh
.claude/: settings.json
.claude/commands/: fix-e2e.md  fix-qa-bug.md  generate-qa-sheet.md  teach-impeccable.md  test-api.md  test-business.md  test-e2e.md  test-integration.md  test-live.md  test-security.md  test-tenant.md
chatterbox/: CLAUDE.md  api_server.py  requirements.txt
ditto/: CLAUDE.md  Dockerfile  README.md  avatar_db.py  ditto_api.py  download_weights.sh  prerender_clips.py  pyproject.toml  setup.sh  test_viewer.html
ditto/ditto-talkinghead/: CLAUDE.md  inference.py  stream_pipeline_offline.py  stream_pipeline_online.py
ditto/ditto-talkinghead/core/atomic_components/: CLAUDE.md  audio2motion.py  avatar_registrar.py  cfg.py  condition_handler.py  decode_f3d.py  loader.py  motion_stitch.py  putback.py  source2info.py  warp_f3d.py  wav2feat.py  writer.py
ditto/ditto-talkinghead/core/aux_models/: CLAUDE.md
ditto/ditto-talkinghead/core/models/: CLAUDE.md  appearance_extractor.py  decoder.py  lmdm.py  motion_extractor.py  stitch_network.py  warp_network.py
ditto/ditto-talkinghead/core/utils/: CLAUDE.md  tensorrt_utils.py
ditto/ditto-talkinghead/scripts/: cvt_onnx_to_trt.py
docs/: ACCESS.md  ARCHITECTURE.md  CODEBASE_AUDIT.md  DEPLOY_LOG.md  PATTERNS.md  SSH_CONFIG.md
skyreels/: CLAUDE.md  README.md  app.py  requirements.txt  setup.sh
skyreels/diffposetalk/: CLAUDE.md
skyreels/skyreels_a1/: CLAUDE.md
smolvlm/: CLAUDE.md  pyproject.toml  requirements.txt  smolvlm_server.py
tasks/: bugs.md  features.md  lessons.md  todo.md
tests/: test_avatar_db.py  test_input_validation.py  test_smolvlm_validation.py
